# web-intelligence-rs

./: .gitignore  Cargo.toml  README.md  RESEARCH_AND_STRATEGY_REPORT.md  package-lock.json
examples/: basic_usage.rs
frontend/: ai-sdk.js  ai-sdk.ts
src/: error.rs  lib.rs  tauri_plugin.rs
